# rpg-rules-ai

./: .env.example  .gitignore  CLAUDE.md  Capa_RAG.ipynb  Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml
caprag/: api.py  chunking.py  config.py  contextualize.py  entity_extractor.py  entity_index.py  extraction.py  frontend.py  graph.py  ingest.py  ingestion_job.py  pipeline.py  prompts.py  retriever.py  schemas.py  services.py
caprag/static/: style.css
caprag/strategies/: __init__.py  base.py  factory.py  multi_hop.py  multi_question.py
caprag/templates/: base.html  chat.html  documents.html
caprag/templates/fragments/: chat_answer.html  chat_message.html  doc_list.html  (+3 more)
deploy/: caprag.service  install.sh  rpg-rules-ai.service
rpg_rules_ai/: api.py  chunking.py  config.py  contextualize.py  entity_extractor.py  entity_index.py  frontend.py  graph.py  ingest.py  ingestion_job.py  pipeline.py  retriever.py  services.py
rpg_rules_ai/static/: style.css
rpg_rules_ai/strategies/: __init__.py  base.py  factory.py  multi_hop.py  multi_question.py
rpg_rules_ai/templates/: base.html  chat.html  prompts.html
scripts/: backfill_entities.py
tests/: test_api.py  test_batched_chroma.py  test_chunking.py  test_contextualize.py  test_entity_extractor.py  test_entity_index.py  test_extraction.py  test_factory.py  test_graph.py  test_ingest.py  test_ingestion_job.py  test_multi_hop_entity.py  test_multi_question.py  test_persistent_docstore.py  test_pipeline.py  test_prompts.py  test_retriever.py  test_strategies.py  test_upload_endpoint.py
(+101 files in other folders)
