[project]
name = "caprag"
version = "0.1.0"
description = "Agentic RAG system for RPG rulebooks"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "chromadb>=1.0",
    "langchain-chroma>=0.2",
    "unstructured[md]>=0.16",
    "nltk>=3.9",
    "pydantic-settings>=2.7",
    "langchain>=0.3",
    "langchainhub>=0.1",
    "python-dotenv>=1.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.6",
    "pymupdf4llm>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
